js pseudo code added

--- a/index.html
+++ b/index.html
@@ -25,21 +25,33 @@
 
     <P> You will be assigned a random number at the start of the game. Using the four crystals below you will be able to
         match your assigned number. Each crystal will have a unique value/number assigned to it. The goal is to figure
-        out the value of each crystal and then do your best to reach the assigned number. Happy clicking! You're a gem,
-        you've got this!</P>
+        out the value of each crystal and then do your best to reach the assigned number. You're a gem! Happy clicking! </P>
 
     <div id="scoreBoard">
         <div id="leftDiv">
-            <h2>TOTAL</h2>
+            <h2> YOUR TOTAL SCORE</h2>
             <h1 id="totalSum">0</h1>
         </div>
         <div id="rightDiv">
-            <h2>MATCH</h2>
+            <h2>MATCH THIS  No.</h2>
             <h1 id="matchThis">0</h1>
         </div>
-    </div>
+     </div>
+    
 
     <div id="imgDiv"></div>
+
+    <div id="winlose">
+        <div id="wins">
+            <h2>Your Wins<h2>
+            <h1 id="totalwins">0</h1>
+        </div>
+        <div id="loses">
+            <h2>Your Loses</h2>
+            <h1 id="totalloses">0</h1>
+        </div>
+
+    </div>
 
     <!--Added link to the jQuery Library-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
