changes made to games.js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1 id="title">
         Crystals Collector!
     </h1>
+    <img src="assets/images/crystal1.jpg">
 
     <h2 id="2ndTitle">
         Intructions
