changes to html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CrytalsCollector Game</title>
     <!--Added link to my css stylesheet-->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Added link to font awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
@@ -45,11 +45,11 @@
     <div id="winlose">
         <div id="wins">
             <h2>Your Wins<h2>
-            <h1 id="totalwins">0</h1>
+            <h1 id="totalWins">0</h1>
         </div>
         <div id="loses">
             <h2>Your Loses</h2>
-            <h1 id="totalloses">0</h1>
+            <h1 id="losses">0</h1>
         </div>
 
     </div>
